--- a/Project/Src/ProjectCommon/ProjectCommon.csproj
+++ b/Project/Src/ProjectCommon/ProjectCommon.csproj
@@ -137,6 +137,7 @@
     <Compile Include="GameEngineInitialization.cs" />
     <Compile Include="HighLevel Materials\DefaultShadowCasterMaterial.cs" />
     <Compile Include="Post Processing\ColorCorrectionCompositorInstance.cs" />
+    <Compile Include="Post Processing\SharpenCompositorInstance.cs" />
     <Compile Include="Post Processing\GrayscaleCompositorInstance.cs" />
     <Compile Include="Post Processing\DepthOfFieldCompositorInstance.cs" />
     <Compile Include="Post Processing\FXAACompositorInstance.cs" />
